# cluster-ci-cache

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
crates/ci-cache-agent/: Cargo.toml
crates/ci-cache-agent/src/: main.rs
crates/ci-cache-backend-fs/: Cargo.toml
crates/ci-cache-backend-fs/src/: backend.rs  lib.rs
crates/ci-cache-backend-fs/tests/: integration_fs.rs
crates/ci-cache-backend-s3/: Cargo.toml
crates/ci-cache-backend-s3/src/: backend.rs  impl_cache.rs  lib.rs  signing.rs
crates/ci-cache-cli/: Cargo.toml
crates/ci-cache-cli/src/: client.rs  main.rs  ops.rs
crates/ci-cache-core/: Cargo.toml
crates/ci-cache-core/src/: archive.rs  archive_ops.rs  backend.rs  compression.rs  config.rs  config_extra.rs  digest.rs  error.rs  lib.rs  manifest.rs  metrics.rs  paths.rs
crates/ci-cache-server/: Cargo.toml
crates/ci-cache-server/src/: api.rs  api_rest.rs  api_save.rs  backend_factory.rs  main.rs  session.rs
deploy/helm/cluster-ci-cache/: Chart.yaml  values.yaml
deploy/helm/cluster-ci-cache/templates/: _helpers.tpl  agent.yaml  configmap.yaml  server.yaml  serviceaccount.yaml
deploy/k8s/: agent.yaml  config.yaml  kustomization.yaml  rbac.yaml  server.yaml
docs/: architecture.md  cache-types.md  operations.md  security.md
examples/: config.example.yaml
examples/buildkit/: docker-cache.sh
examples/github-actions/: ci.yml
examples/gitlab/: .gitlab-ci.yml
examples/tekton/: task-ci-cache-cargo.yaml
website/: Dockerfile  cloudflared-config.yaml  deploy.yaml  server.tether
website/src/: 01_server.tether  02_layout.tether  03_nav_hero.tether  04_arch_qs.tether  05_stats_footer.tether  content.tether  footer.tether  footer_fix.tether  full.tether  full_server.tether  full_website.tether  page.tether  sections.tether  sections_content.tether  sections_hero.tether  server.tether  styles.tether  styles_only.tether  website.tether
