[package]
name = "ci-cache-backend-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Filesystem/PVC backend for Cluster CI Cache"

[dependencies]
ci-cache-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ci-cache-core = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
