[package]
name = "ci-cache-backend-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S3-compatible backend for Cluster CI Cache"

[dependencies]
ci-cache-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
hex = { workspace = true }
url = "2"
percent-encoding = "2"
chrono = { workspace = true }
