[package]
name = "ci-cache-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Cluster CI Cache"

[[bin]]
name = "ci-cache"
path = "src/main.rs"

[dependencies]
ci-cache-core = { workspace = true }
ci-cache-backend-fs = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
