[package]
name = "ci-cache-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core models, traits, and utilities for Cluster CI Cache"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
uuid = { workspace = true }
prometheus = { workspace = true }
